// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item ConnectedItem should render an InteractionStateManager 1`] = `
<InteractionStateManager
  isSelected={false}
  spacing="default"
  styles={[Function]}
  text="My item"
>
  <unknown />
</InteractionStateManager>
`;

exports[`Item ConnectedItem should render the Item primitive 1`] = `
<WithTheme(ItemPrimitive)
  isActive={false}
  isHover={false}
  isSelected={false}
  spacing="default"
  styles={[Function]}
  text="My item"
/>
`;

exports[`Item should render correctly 1`] = `
<AnalyticsContext
  data={
    Object {
      "componentName": "item",
    }
  }
>
  <ForwardRef(WithAnalyticsEvents(ConnectedItem))
    text="My item"
  />
</AnalyticsContext>
`;
